--- a/static/styles.css
+++ b/static/styles.css
@@ -80,14 +80,19 @@ main {
     min-height: 150px;
 
     padding: .8em;
+    padding-top: 0;
 
     background: rgba(255, 255, 255, .92);
     border-bottom-right-radius: 1.5em;
     box-shadow: rgb(120, 120, 120) 5px 5px 15px 0;
 }
 
-.sticker hr {
-    margin: .6em 0 .2em;
+.sticker .tools button {
+    padding: 0;
+    margin: 0 0 0 .5em;
+
+    border: none;
+    background: none;
 }
 
 .sticker .top {
@@ -105,6 +110,10 @@ main {
     border-radius: 20%;
     color: white;
     background: rebeccapurple;
+}
+
+.sticker hr {
+    margin: .6em 0 .2em;
 }
 
 .add-sticker {
@@ -154,4 +163,8 @@ footer {
 
 .red-border {
     border: 2px solid red;
+}
+
+.space {
+    clear: both;
 }
