Fix some bugs and Add markDel function

--- a/static/styles.css
+++ b/static/styles.css
@@ -136,7 +136,9 @@ main {
     width: 100%;
 }
 
-.searched-contentб .searched-title, .searched-mark {
+
+
+.searched-content, .searched-title, .searched-mark {
     background: white;
 }
 .searched-content {
